Corrected scrollbar position for right menu + changes in the loader positioning and tex fonts

--- a/Project/Tests/rslidy-master-af0bc49d8374a5ad94ebf85d5b7130a636eadb35/css/rslidy_animation.css
+++ b/Project/Tests/rslidy-master-af0bc49d8374a5ad94ebf85d5b7130a636eadb35/css/rslidy_animation.css
@@ -194,9 +194,12 @@ body.animated :not(.hidden).slide.scale-animation{
 
 /* Big File loading animation */
 #loader {
-	margin: 30% 0;
-	font-size: 3em;
+	position: absolute;
+	top: 45%;
+	font-size: 4em;
 	text-align: center;
+	width: 100%;
+	font-family: "Comic Sans MS";
 }
 
 #loader div{
