--- a/Project/Tests/rslidy-master-af0bc49d8374a5ad94ebf85d5b7130a636eadb35/css/rslidy_tap_region_bigger.css
+++ b/Project/Tests/rslidy-master-af0bc49d8374a5ad94ebf85d5b7130a636eadb35/css/rslidy_tap_region_bigger.css
@@ -76,10 +76,12 @@ body
 
 #toc{
   padding-top: 1em;
+  direction: rtl;
 }
 
 #toc .slide-link{
   padding-left: 1em;
+  direction: ltr;
 }
 
 /* Items inside the canvas container (e.g. presentation slides) */
